Adding figma oauth
